--- a/src/main.css
+++ b/src/main.css
@@ -6,37 +6,78 @@
 
 /* text for paragraphs */
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");
-/* text for all caps */
-@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap");
+
 body {
   font-family: "Lexend Deca", sans-serif;
+  font-size: 15px;
+  background-color: hsl(0, 0%, 95%);
+  height: 100vh;
+}
+
+p {
+  color: hsla(0, 0%, 100%, 0.75);
+  line-height: 28px;
+  padding-bottom: 38px;
 }
 
 .title {
   font-family: "Big Shoulders Display", cursive;
+  color: hsla(0, 0%, 100%, 0.75);
+  font-size: 40px;
+  text-transform: uppercase;
+  padding-bottom: 38px;
+}
+
+.bg-1 {
+  background-color: hsl(31, 77%, 52%);
+}
+
+.bg-2 {
+  background-color: hsl(184, 100%, 22%);
+}
+
+.bg-3 {
+  background-color: hsl(179, 100%, 13%);
+}
+
+button {
+  background-color: hsl(0, 0%, 95%);
+  padding: 20px;
+  border-radius: 50px;
+  border: none;
+  font-size: 20px;
+}
+
+.bg-1 button {
+  color: hsl(31, 77%, 52%);
+}
+
+.bg-2 button {
+  color: hsl(184, 100%, 22%);
+}
+
+.bg-3 button {
+  color: hsl(179, 100%, 13%);
 }
 
 /* Mobile First */
 
-.container {
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  min-width: 375px;
-}
-
 .card {
   display: flex;
   flex-direction: column;
-  border: 1px solid blue;
-  margin: 12px 6px;
+  padding: 38px 60px;
+  max-width: 375px;
+  margin: auto;
 }
 
 .icon {
   width: 50px;
+  padding-bottom: 38px;
 }
 
 @media (min-width: 1020px) {
   .container {
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
